--- a/plugin-redis/package.json
+++ b/plugin-redis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typed-ref-core",
+  "name": "typed-ref-plugin-redis",
   "version": "0.0.1",
   "description": "",
   "main": "build/index.js",
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/elierotenberg/typed-ref#readme",
   "devDependencies": {
+    "@types/express": "^4.17.7",
     "@types/jest": "^26.0.3",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.0.22",
+    "@types/redis": "^2.8.25",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "cpx": "^1.5.0",
@@ -33,15 +35,23 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "express": "^4.17.1",
+    "fastify": "^3.0.2",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
+    "redis": "^3.0.2",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
+    "typed-ref-core": "file:../dist/typed-ref-core-0.0.1.tgz",
     "typedoc": "^0.17.8",
     "typescript": "^3.9.5"
   },
   "dependencies": {
     "js-yaml": "^3.14.0",
     "tslib": "^2.0.0"
+  },
+  "peerDependencies": {
+    "typed-ref-core": "file:../dist/typed-ref-core-0.0.1.tgz",
+    "redis": "^3.0.2"
   }
 }
